--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app-server.js",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.6.0"
   },
   "devDependencies": {},
   "scripts": {
